@@ -1,15 +1,31 @@
 archetype 
 	adl-test-ENTRY.archetype_language.draft
 	
-language
-	original_language = <"en"> 
-	
 concept 
 	[at0000]	--  test
 	
-language -- TODO support translations
+language
 	original_language = <"en"> 
-	
+	translations = <
+        ["de"] = <
+            author = <
+            	["name"] = <"Harry Potter">
+            	["email"] = <"harry@something.somewhere.co.uk">            	
+            >
+            accreditation = <"British Medical Translator id 00400595">
+            other_details = <
+            	["review 1"] = <"Ron Weasley">
+            	["review 2"] = <"Rubeus Hagrid">            	
+            >
+        >
+        ["ru"] = <
+            author = <
+            	["name"] = <"Vladimir Nabokov">
+            	["email"] = <"vladimir@something.somewhere.ru">            
+            >
+            accreditation = <"Russion Translator id 892230A">
+    	>
+    >	
 definition
 	ENTRY[at0000] matches {*}
 
