@@ -1,3 +1,6 @@
+2007/02/01
+.added support for translations in language part
+
 2007/01/24
 .added support for assumedValue parsing in CDvOrdinal
 
